--- a/index.html
+++ b/index.html
@@ -56,20 +56,18 @@
       </div>
     </div> -->
 
-    <div class="card rounded-0">
-      <h3 class="card-header" style="height: 300px border-right-width: 0px; width: 800px;">
+    <div class="card my-3 ml-3" style="height: 300px; border-right-width: 0px;">
+      <div class="card-body">
+
         <div class="body2">
 
         </div>
-      </h3>
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
 
   </div>
+
+
 
 
 
