--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./assets/style.css">
-  <title>First Team Project</title>
+  <title>Weather Forecast</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
         <h5>Search for a City:</h5>
         <form class="form-inline my-2 my-lg-0">
           <div class="input-group flex-nowrap">
-            <input type="text" id="listSearch" class="form-control textInput" placeholder="Type city to search">
+            <input type="text" id="listSearch" class="form-control" placeholder="Type city to search">
             <button class="btn btn-outline-primary my-2 my-sm-0" id="submitbtn" type="submit">
               <i class="fa fa-search" aria-hidden="true"></i>
             </button>
