--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./assets/style.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Weather Forecast</title>
 </head>
 
@@ -20,11 +20,12 @@
 
   <div class="row">
     <div class="card rounded-0" style="width: 25rem; background-color:aliceblue;">
-      <div class="card-body">
+      <div class="card-body ml-2">
         <h5>Search for a City:</h5>
+        <span class="bg-danger" id="error"></span>
         <form class="form-inline my-2 my-lg-0">
           <div class="input-group flex-nowrap">
-            <input type="text" id="listSearch" class="form-control" placeholder="Type city to search">
+            <input type="text" id="city" class="form-control" placeholder="Type city to search">
             <button class="btn btn-outline-primary my-2 my-sm-0" id="submitbtn" type="submit">
               <i class="fa fa-search" aria-hidden="true"></i>
             </button>
