--- a/index.html
+++ b/index.html
@@ -1,80 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/styles/style.css" />
+    <title>Weather Forecast</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./styles/style.css">
-  <title>Weather Forecast</title>
-</head>
-
-<body>
-  <div class="navbar bg-dark text-light rounded-0 d-flex justify-content-center">
-    <h1>Weather Dashboard</h1>
-  </div>
-
-  <div class="row">
-    <div class="card rounded-0" style="width: 25rem; background-color:aliceblue;">
-      <div class="card-body ml-2">
-        <h5>Search for a City:</h5>
-        <span class="bg-danger" id="error"></span>
-        <form class="form-inline my-2 my-lg-0">
-          <div class="input-group flex-nowrap">
-            <input type="text" id="city" class="form-control" placeholder="Type city to search">
-            <button class="btn btn-outline-primary my-2 my-sm-0" id="submitbtn" type="submit">
-              <i class="fa fa-search" aria-hidden="true"></i>
-            </button>
-            <div class="input-group-prepend"></div>
-
-          </div>
-        </form>
-        <br>
-        <ul class="list-group" id="myList">
-          <li class="list-group-item">Austin</li>
-          <li class="list-group-item">Chicago</li>
-          <li class="list-group-item">New York</li>
-          <li class="list-group-item">Orlando</li>
-          <li class="list-group-item">San Francisco</li>
-          <li class="list-group-item">Seattle</li>
-          <li class="list-group-item">Denver</li>
-          <li class="list-group-item">Atlanta</li>
-        </ul>
-
-      </div>
+  <body>
+    <div
+      class="navbar bg-dark text-light rounded-0 d-flex justify-content-center"
+    >
+      <h1>Weather Dashboard</h1>
     </div>
 
-    <div class="card my-3 ml-3" style="height: 300px; border-right-width: 0px;">
-      <div class="card-body">
+    <div class="row">
+      <div
+        class="card rounded-0"
+        style="width: 25rem; background-color: aliceblue;"
+      >
+        <div class="card-body ml-2">
+          <h5>Search for a City:</h5>
+          <span class="bg-danger" id="error"></span>
+          <form class="form-inline my-2 my-lg-0">
+            <div class="input-group flex-nowrap">
+              <input
+                type="text"
+                id="city"
+                class="form-control"
+                placeholder="Type city to search"
+              />
+              <button
+                class="btn btn-outline-primary my-2 my-sm-0"
+                id="submitbtn"
+                type="submit"
+              >
+                <i class="fa fa-search" aria-hidden="true"></i>
+              </button>
+              <div class="input-group-prepend"></div>
+            </div>
+          </form>
+          <br />
+          <ul class="list-group" id="myList">
+            <li class="list-group-item">Austin</li>
+            <li class="list-group-item">Chicago</li>
+            <li class="list-group-item">New York</li>
+            <li class="list-group-item">Orlando</li>
+            <li class="list-group-item">San Francisco</li>
+            <li class="list-group-item">Seattle</li>
+            <li class="list-group-item">Denver</li>
+            <li class="list-group-item">Atlanta</li>
+          </ul>
+        </div>
+      </div>
 
-        <div class="body2">
-
+      <div
+        class="card my-3 ml-3"
+        style="height: 300px; border-right-width: 0px;"
+      >
+        <div class="card-body">
+          <div class="body2"></div>
         </div>
       </div>
     </div>
 
-  </div>
-
-
-
-
-
-
-  <script src="https://code.jquery.com/jquery-3.5.0.min.js"
-    integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.3/moment.min.js"
-    integrity="sha256-C66CaAImteEKZPYvgng9j10J/45e9sAuZyfPYCwp4gE=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-  </script>
-  <script src="./scripts/app.js"></script>
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.5.0.min.js"
+      integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.3/moment.min.js"
+      integrity="sha256-C66CaAImteEKZPYvgng9j10J/45e9sAuZyfPYCwp4gE="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./assets/scripts/app.js"></script>
+  </body>
 </html>
